--- a/Data-and-Authentication/JS-Applications-Data-and-Authentication_HOMEWORK/03.Students/styles.css
+++ b/Data-and-Authentication/JS-Applications-Data-and-Authentication_HOMEWORK/03.Students/styles.css
@@ -1,45 +1,57 @@
-body{
+body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-table{
-    border:1px solid #234465;
+table {
+    border: 1px solid #234465;
     padding: 1%;
     margin: 0 auto;
     width: 70%;
     border-radius: 4px;
 }
-table th{
+
+table th {
     text-decoration: underline;
     text-align: left;
 }
-table tbody td{
+
+table tbody td {
     text-align: left;
-    border-bottom:1px solid black;
+    border-bottom: 1px solid black;
     padding: 0.5%;
 }
 
-table tbody tr:nth-child(even){
+table tbody tr:nth-child(even) {
     background-color: #234465;
     color: white
 }
 
-table tbody tr:nth-child(odd){
+table tbody tr:nth-child(odd) {
     color: #234465;
     border-bottom: 1px solid black;
 }
 
-table tbody tr:nth-child(odd) button{
+table tbody tr:nth-child(odd) button {
     background: #234465;
-    color:white;
+    color: white;
 }
 
-table tbody tr:nth-child(even) button{
+table tbody tr:nth-child(even) button {
     background: white;
-    color:#234465;
+    color: #234465;
 }
 
-table tr:hover{
+table tr:hover {
     text-decoration: underline;
+}
+
+table tfoot tr:nth-child {
+    color: #234465;
+    border-bottom: 1px solid black;
+}
+
+table tfoot tr td .button {
+    background: #234465;
+    color: white;
 }
